Disable <meta> tag in a shadow tree

The spec is:
- http://w3c.github.io/webcomponents/spec/shadow/#inertness-of-html-elements-in-a-shadow-tree
- https://html.spec.whatwg.org/#meta

Though HTML Standard has not fully explained how <meta> tag should work in a shadow tree yet,
our consensus is <meta> should not work in a shadow tree.

This CL didn't add a new test, just removing one expectation file of a web platform test.
We would have tests for meta tag in web platform tests.

BUG=676092

Review-Url: https://codereview.chromium.org/2647293002
Cr-Commit-Position: refs/heads/master@{#445373}

Former-commit-id: 5dc22a61fc8e68b59cc7e82d2f616daa185c6507